Changelog:
Versions without changelogs probably had very small misc fixes, like tweaks to the source code

Key:
  + Addition
  = Fix
  ! Change
  - Removal

Version 1.5.00-dev
 - Removed deprecated permission nodes

Version 1.4.08-dev
 + Added a new skill; Alchemy. Special thanks to EasyMFnE for creating this!
 + Added SecondaryAbilityType enum, and new SecondaryAbilityWeightedActivationCheckEvent, fired when a secondary ability checkes its activation chances
 + Added the possibility to gain experience when using Fishing "Shake"
 + Added config options to disable various sound effects
 + Smelting now works with custom ores - add smelting XP value to blocks.yml, or it will default to 1/10th of normal XP.
 + Added automatic cleanup of backups folder.
 + Added bypass permission for finding Fishing traps
 + Added level threshold settings to hardcore modes. When a players skill level is below this threshold, they will not lose any stats
 + Added party alliances, two parties can now team up. Allies share party chat and cannot harm each other.
 = Fixed bug where LeafBlower permissions were ignored
 = Fixed bug with toggle commands not properly displaying the success message.
 = Fixed IllegalArgumentException caused by an empty Fishing treasure category
 = Fixed bug with Salvage not reading the config value for the anvil material.
 = Fixed exploit where you could receive smelting XP for improper items
 = Fixed bug where the Unbreaking enchantment was ignored when using "Super Breaker" or "Giga Drill Breaker"
 = Fixed bug which prevented players from gaining Acrobatics XP when the setting 'Prevent_XP_After_Teleport' was set to false
 = Fixed bug where cooldown donor perks were reducing more than expected
 = Fixed bug where disabling hardcore mode for specific skills didn't work
 = Fixed bug which caused the backup cleanup to delete old backups while it should have kept those
 = Fixed bug where party chat broke if the display name contained special characters